--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
     <!-- Style CSS -->
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <!-- JQuery -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -78,6 +78,6 @@
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- Script JS -->
-    <script src="assets/js/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
