corrected scrtip js code and added style css

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
       <div class="col-12 col-sm-12 col-md-8 float-end">
         <div>
-          <h2 class="card-subtitle text-center fs-4 bg-light">
+          <h2 class="card-subtitle text-center fs-4 bg-gradient ">
             Current Weather
           </h2>
           <div class="city-name"></div>
         </div>
 
-        <div>
-          <h2 class="card-subtitle text-center fs-4 bg-light">
+        <div id="forecast">
+          <h2 class="card-subtitle text-center fs-4 bg-gradient">
             5 Day forecast
           </h2>
           <div class="five-day-forecast"></div>
